# films-recommendations

./: Shuttle.toml
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
