[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.28.2"

shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"]}
sqlx = { version = "0.8.2", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json"
]}